--- a/login.html
+++ b/login.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My app</title>
-	login form
+	<title></title>
 </head>
 <body>
-something
+login
 </body>
 </html>
